tests/snapshots/preview__preview_pty__preview_pty_flag@001.snap
---
source: tests/preview.rs
description: "input: items [\"x\"]\noptions: --preview tty -s && echo YES || echo NO --preview-window :pty"
---
"                                        │YES                                    "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> x                                     │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
