tests/snapshots/preview__preview_pty__preview_pty_navigation@001.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview echo {} --preview-window :pty"
---
"                                        │a                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"  b                                     │                                       "
"> a                                     │                                       "
"  3/3                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
