tests/snapshots/preview__preview_pty__preview_pty_navigation@002.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview echo {} --preview-window :pty\nafter:\n  @key Up"
---
"                                        │b                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"> b                                     │                                       "
"  a                                     │                                       "
"  3/3                                1/0│                                       "
">                                       │                                       "
cursor: (24, 3)
