tests/snapshots/preview__preview_pty__preview_pty_nul_char@001.snap
---
source: tests/preview.rs
description: "input: items [\"a\\0b\"]\noptions: --preview printf \"{}\" | hexdump -C --preview-window :pty"
---
"                                        │00000000  27 61 00 62 27               "
"                                        │00000005                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> ab                                    │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
