tests/snapshots/preview__preview_pty__preview_pty_offset_expr.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                               321/1000│                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │> 123 321                               "
"=                                      │  1/1                                0/0"
"=                                      │>                                       "
cursor: (24, 43)
