tests/snapshots/preview__preview_pty__preview_pty_plus.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │a                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"  b                                     │                                       "
"> a                                     │                                       "
"  3/3                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
